--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "nodemon": "^2.0.7",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6"
